--- a/About Us.html
+++ b/About Us.html
@@ -202,13 +202,13 @@ display:block;
             color: #2c3e50;
             margin-bottom: 15px;
             position: relative;
-            display: inline-blck;
+            display: inline-block;
         }
 
         .section-title h2::after {
             content: '';
             position: absolute;
-            width: 60%;
+            width:60%;
             height: 3px;
             background: #3498db;
             bottom: -10px;
@@ -254,7 +254,7 @@ display:block;
         }
 
         .about-content {
-            flex: 1;
+            flex:1;
             min-width: 300px;
             padding: 40px;
         }
