--- a/Gallery.html
+++ b/Gallery.html
@@ -5,9 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best Power - Gallery</title>
     <link rel="stylesheet" href="gallerystyle.css">
-   
+       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
+     <nav>
+        <div class="navbar">
+            <div class="logo">
+                <h2>Best Power</h2>
+            </div>
+            <div class="navlinks">
+                <ul class="links">
+                    <li><a href="index.html">Home</a></li>
+                    <li>
+                        <a href="#">Service and product</a>
+                        <ul class="htmlmenu">
+                            <li><a href="#">Import and Distribution of Power Equipment</a></li>
+                            <li><a href="#">Manufacturing, Assembly, and Testing</a></li>
+                            <li><a href="#">Import and Distribution of ICT Equipment</a></li>
+                            <li><a href="#">Automatic Voltage Regulators (AVRs)</a></li>
+                            <li><a href="#">Embedded Solutions and Software Integration</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="About Us.html">About us</a>
+                        <ul class="jssubmenu">
+                            <li><a href="About Us.html#about" >About company</a></li>
+                            <li><a href="about us.html#mission">Mission</a></li>
+                            <li><a href="about us.html#vision">Vision</a></li>
+                            
+                        </ul>
+                    </li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="contact us.html">Contact us</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <div class="gallery-wrapper">
         <div class="gallery-header">
             <h1>Our Project Gallery</h1>
@@ -78,5 +112,30 @@
             </div>
         </div>
     </div>
+      <footer class="footer">
+        <div class="container">
+            <div class="footleft">
+                <h4>&copy; Best Power</h4>
+                <address>
+                    <h2>Address</h2>
+                    <div class="add">
+                        Yeka Subcity, Woreda 07, Near Signal Square,<br>
+                        Tsega Bldg, 7th Floor, Office No. 701<br>
+                        Addis Ababa, Ethiopia
+                    </div>
+                </address>
+            </div>
+            <div class="social">
+                <h2 class="follow">Follow Us</h2>
+                <ul class="social-links">
+                    <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+                    <li><a href="#"><i class="fab fa-telegram"></i></a></li>
+                    <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+
 </body>
 </html>
