--- a/manu.html
+++ b/manu.html
@@ -153,8 +153,8 @@ user-friendly design and technological mastery.</p>
                 <ul class="social-links">
                     <li><a href="#"><i class="fab fa-facebook"></i></a></li>
                     <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-                    <li><a href="#"><i class="fab fa-telegram"></i></a></li>
-                    <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
+                    <li><a href="https://t.me/miki_a7"><i class="fab fa-telegram"></i></a></li>
+                    <li><a href="https://wa.me/251962696847"><i class="fab fa-whatsapp"></i></a></li>
                 </ul>
             </div>
         </div>
