--- a/Gallery.html
+++ b/Gallery.html
@@ -101,14 +101,14 @@
             <div class="gallery-item">
                 <img src="images/Power line.jpg" alt="AVR Production">
                 <div class="item-info">
-                    <h3>AVR Assembly</h3>
+                    <h3>Power Lines</h3>
                     <p>Automatic Voltage Regulator production</p>
                 </div>
             </div>
             <div class="gallery-item">
                 <img src="images/techn.jpg" alt="AVR Production">
                 <div class="item-info">
-                    <h3>AVR Assembly</h3>
+                    <h3>Installation</h3>
                     <p>Automatic Voltage Regulator production</p>
                 </div>
             </div>
